<resources>
    <string name="app_name">GSOInfoAppOberflaecheFuerGaeste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_faecher">Fächer</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="menu_dbk">Datenbanken</string>
    <string name="rationale_datenbank">Rationale Datenbank</string>
    <string name="dies_kann_man_sich_als_ein_sammlung_von_tabellen_vorstellen_wo_verschiedene_datens_tze_abgespeichert_sind_jede_tupel_zeile_in_einer_tabelle_ist_ein_datensatz">Dies kann man sich als ein Sammlung von Tabellen vorstellen, wo verschiedene Datensätze abgespeichert sind. Jede Tupel(Zeile) in einer Tabelle ist ein Datensatz.</string>
    <string name="dies_ist_ein_merkmal_einer_tupel_und_beschreibt_eine_eigenschaft_einer_entit_tsmenge_in_der_rationalen_datenbank_ist_ein_attribut_die_spalte_einer_tabelle_dabei_wir_unterschieden_zwischen_zusammengesetzten_h_herwertigen_und_abgeleiteten_attributen">Dies ist ein Merkmal einer Tupel und beschreibt eine Eigenschaft einer Entitätsmenge. In der rationalen Datenbank ist ein Attribut die Spalte einer Tabelle. Dabei wir unterschieden zwischen zusammengesetzten, höherwertigen und abgeleiteten Attributen.</string>
    <string name="attribute">Attribute</string>
    <string name="normalisierung">Normalisierung</string>
    <string name="darunter_versteht_man_die_aufteilung_von_attributen_in_einer_relationalen_datenbank_in_mehreren_relationen_mithilfe_der_normalformen">Darunter versteht man die Aufteilung von Attributen, in einer relationalen Datenbank, in mehreren Relationen mithilfe der Normalformen.</string>
    <string name="normalform_1">Normalform 1</string>
    <string name="dies_liegt_vor_wenn_alle_informationen_atomar_vorliegen">Dies liegt vor, wenn alle Informationen atomar vorliegen.</string>
    <string name="normalform_2">Normalform 2</string>
    <string name="die_liegt_vor_wenn_er_sich_in_der_1nf_befindet_und_jedes_nichtschl_sselattribut_von_jedem_schl_sselkandidaten_voll_funktional_abh_ngig_ist">Die liegt vor, wenn er sich in der 1NF befindet und jedes Nichtschlüsselattribut von jedem Schlüsselkandidaten voll funktional abhängig ist.</string>
    <string name="normalform_3">Normalform 3</string>
    <string name="dies_ist_vorhanden_wenn_es_sich_in_der_2nf_befindet_und_kein_nichtschl_sselatribut_transiv_von_einem_kandidatenschl_ssel_abh_ngt">Dies ist vorhanden, wenn es sich in der 2NF befindet und kein Nichtschlüsselatribut transiv von einem Kandidatenschlüssel abhängt.</string>
    <string name="todo">TODO</string>
    <string name="menu_swe">Software</string>
    <string name="if_verzweigung">If-Verzweigung</string>
    <string name="while_schleife">While-Schleife</string>
    <string name="datentypen">Datentypen</string>
    <string name="for_schleife">For-Schleife</string>
    <string name="die_ist_hnlich_wie_die_do_schleife_nur_dass_wenn_die_while_bedingung_zutrifft_wird_die_schleife_beendet_bzw_wird_garnicht_erst_angefangen">Die ist ähnlich wie die do-Schleife nur, dass wenn die while-Bedingung zutrifft, wird die Schleife beendet bzw. wird garnicht erst angefangen.</string>
    <string name="dies_ist_ein_codeblock_der_eine_reihe_von_anweisungen_enth_lt_und_auch_ausf_hrt_wenn_die_methode_aufgerufen_wird_und_die_erforderlichen_methodenargumente_angegeben_werden">Dies ist ein Codeblock, der eine Reihe von Anweisungen enthält und auch ausführt, wenn die Methode aufgerufen wird und die erforderlichen Methodenargumente angegeben werden.</string>
    <string name="methode">Methode</string>
    <string name="damit_kann_man_aktionen_ausf_hren_wenn_auch_die_gegebene_bedingung_auch_zutrifft">Damit kann man Aktionen ausführen, wenn auch die gegebene Bedingung auch zutrifft!</string>
    <string name="es_gibt_insgesamt_15_datentypen_wovon_wir_eigentlich_nur_string_dies_kann_keine_oder_mehrere_unicode_zeichen_haben_sprich_es_kann_auch_den_wert_null_haben_int_damit_kann_man_nur_gazzahlen_schreiben_double_damit_kann_man_jegliche_zahl_schreiben_sprich_auch_kommazahlen_und_gegebenfalls_auch_mal_bool_dies_besteht_nur_aus_true_und_false_1_und_0_brauchen">Es gibt insgesamt 15 Datentypen, wovon wir eigentlich nur string(Dies kann keine oder mehrere Unicode-Zeichen haben. Sprich es kann auch den Wert null haben.), int(Damit kann man nur Gazzahlen schreiben), double(Damit kann man jegliche Zahl schreiben sprich auch Kommazahlen) und gegebenfalls auch mal bool(Dies besteht nur aus true und false(1 und 0)) brauchen.</string>
    <string name="das_ist_in_grunde_genommen_ein_anweisungsblock_der_durch_das_for_ausgef_hrt_wird">Das ist in grunde genommen ein Anweisungsblock, der durch das for ausgeführt wird.</string>
    <string name="das_wiederholt_den_vorgang_immer_wieder_bis_man_den_befehl_break_einf_gt_und_macht_man_ein_continue_wird_die_schleife_weitergef_hrt_sofern_die_while_bedingung_true_ist">Das wiederholt den Vorgang immer wieder bis man den befehl (break;) einfügt und macht man ein continue, wird die Schleife weitergeführt sofern die while-Bedingung true ist.</string>
    <string name="do_schleife">Do-Schleife</string>
    <string name="menu_BSN">Betriebsystemsnetzwerk</string>
    <string name="menu_ept">Elektroprozesstechnik</string>
    <string name="menu_rst">Rechensystemstechnik</string>
</resources>