<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_dbk"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.nav_dbk"
        android:label="Datenbanken"
        tools:layout="@layout/fragment_datenbaken" />

    <fragment
        android:id="@+id/nav_swe"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.nav_SWE"
        android:label="Software"
        tools:layout="@layout/fragment_software" />

    <fragment
        android:id="@+id/nav_BSN"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.nav_BSN"
        android:label="Betriebssystemsnetzwerk"
        tools:layout="@layout/fragment_nav__b_s_n" />

    <fragment
        android:id="@+id/nav_rst"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.nav_Rechensystemstechnik"
        android:label="Rechensystemstechnik"
        tools:layout="@layout/fragment_nav__rechensystemstechnik" />

    <fragment
        android:id="@+id/nav__ept"
        android:name="com.example.gsoinfoappoberflaechefuergaeste.nav__ept"
        android:label="Elektoprozesstechnik"
        tools:layout="@layout/fragment_nav__ept" />

</navigation>